refined workflow, added inference folder

--- a/clean_dataset.ipynb
+++ b/clean_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "7683b3d8",
    "metadata": {},
    "outputs": [],
@@ -12,37 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "579ace44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1410"
+       "(2438, 494)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_images = set(os.listdir(\"./yolo_dataset/box_visualizations\"))\n",
-    "len(clean_images)"
+    "clean_train_images = set(os.listdir(\"./yolo_dataset/train/box_visualizations\")) \n",
+    "clean_val_images = set(os.listdir(\"./yolo_dataset/val/box_visualizations\"))\n",
+    "len(clean_train_images),len(clean_val_images)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "ae0037a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_folder = \"./yolo_dataset/images\"\n",
-    "target_labels_folder = \"./yolo_dataset/labels\"\n",
+    "target_folder = \"./yolo_dataset/train/images\"\n",
+    "target_labels_folder = \"./yolo_dataset/train/labels\"\n",
     "for image_name in os.listdir(target_folder):\n",
-    "    if image_name in clean_images or image_name.startswith(\"__\"):\n",
+    "    if image_name in clean_train_images or image_name.startswith(\"__\"):\n",
     "        continue\n",
     "    os.remove(os.path.join(target_folder,image_name))\n",
     "    os.remove(os.path.join(target_labels_folder,\n",
@@ -51,25 +52,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "id": "a1993bd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_folder = \"./yolo_dataset/val/images\"\n",
+    "target_labels_folder = \"./yolo_dataset/val/labels\"\n",
+    "for image_name in os.listdir(target_folder):\n",
+    "    if image_name in clean_val_images or image_name.startswith(\"__\"):\n",
+    "        continue\n",
+    "    os.remove(os.path.join(target_folder,image_name))\n",
+    "    os.remove(os.path.join(target_labels_folder,\n",
+    "                           image_name.replace(\".jpg\",\".txt\").replace(\".jpeg\",\".txt\").replace(\".png\",\".txt\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "efc2a40b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['_Generic Face',\n",
-       " 'Brad Pitt',\n",
-       " 'Denzel Washington',\n",
-       " 'Hugh Jackman',\n",
-       " 'Kate Winslet',\n",
-       " 'Leonardo DiCaprio',\n",
-       " 'Scarlett Johansson',\n",
-       " 'Tom Cruise',\n",
-       " 'Tom Hanks']"
+       "['_GenericFace',\n",
+       " 'BradPitt',\n",
+       " 'DenzelWashington',\n",
+       " 'HughJackman',\n",
+       " 'KateWinslet',\n",
+       " 'LeonardoDiCaprio',\n",
+       " 'ScarlettJohansson',\n",
+       " 'TomCruise',\n",
+       " 'TomHanks']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,60 +99,36 @@
     "# Paths\n",
     "dataset_root = 'CelebrityFacesDataset_Curated'\n",
     "output_root = 'yolo_dataset'\n",
-    "image_output_dir = os.path.join(output_root, 'images')\n",
-    "label_output_dir = os.path.join(output_root, 'labels')\n",
-    "visual_output_dir = os.path.join(output_root, 'box_visualizations')\n",
     "\n",
     "\n",
     "# Build class index\n",
     "celebrity_names = sorted([d for d in os.listdir(dataset_root) if os.path.isdir(os.path.join(dataset_root, d)) and not d.startswith('_')])\n",
     "celebrity_names = sorted([d for d in os.listdir(dataset_root) if os.path.isdir(os.path.join(dataset_root, d)) and d.startswith('_')], reverse=True) + celebrity_names\n",
-    "celebrity_names.remove('__No Face')\n",
+    "celebrity_names.remove('__NoFace')\n",
     "celebrity_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "591e8c35",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2060, 2060)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(os.listdir(image_output_dir)), len(os.listdir(label_output_dir))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "7482e2f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, '_Generic Face'),\n",
-       " (1, 'Brad Pitt'),\n",
-       " (2, 'Denzel Washington'),\n",
-       " (3, 'Hugh Jackman'),\n",
-       " (4, 'Kate Winslet'),\n",
-       " (5, 'Leonardo DiCaprio'),\n",
-       " (6, 'Scarlett Johansson'),\n",
-       " (7, 'Tom Cruise'),\n",
-       " (8, 'Tom Hanks')]"
+       "[(0, '_GenericFace'),\n",
+       " (1, 'BradPitt'),\n",
+       " (2, 'DenzelWashington'),\n",
+       " (3, 'HughJackman'),\n",
+       " (4, 'KateWinslet'),\n",
+       " (5, 'LeonardoDiCaprio'),\n",
+       " (6, 'ScarlettJohansson'),\n",
+       " (7, 'TomCruise'),\n",
+       " (8, 'TomHanks')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
